--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 Flask==2.3.3
 flask-cors==4.0.0
 numpy==1.26.4
-scikit-learn==1.4.2
+pandas==2.2.2
 joblib==1.4.2
-librosa==0.10.2.post1
-soundfile==0.12.1
 opencv-python==4.9.0.80
 dlib==19.24.2
 imutils==0.5.4
+sounddevice==0.4.6
+soundfile==0.12.1
+parselmouth==0.4.16
+scipy==1.13.1
+librosa==0.10.2.post1
 matplotlib==3.8.4
-pymongo==4.7.2
-supabase==2.3.0
